remove scroll-x and make text wrappable in select box

--- a/apps/site/components/Common/Select/index.module.css
+++ b/apps/site/components/Common/Select/index.module.css
@@ -133,6 +133,10 @@
       dark:data-[disabled]:text-neutral-700;
   }
 
+  .textWrap {
+    text-wrap: wrap !important ;
+  }
+
   &.dropdown {
     @apply mt-1
       w-[calc(100%+1.5rem)]
